--- a/angular.json
+++ b/angular.json
@@ -34,9 +34,12 @@
               "src/styles.scss",
               "node_modules/primeng/resources/themes/saga-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
-              "node_modules/primeicons/primeicons.css"
+              "node_modules/primeicons/primeicons.css",
+              "src/assets/js-simple-loader-main/loader.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/js-simple-loader-main/loader.js"
+            ]
           },
           "configurations": {
             "production": {
