--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~12.2.0",
     "chart.js": "^3.7.0",
     "express": "^4.17.1",
+    "file-saver": "^2.0.5",
     "path": "^0.12.7",
     "primeicons": "^4.1.0",
     "primeng": "^12.2.1",
@@ -36,6 +37,7 @@
     "@angular-devkit/build-angular": "~12.2.10",
     "@angular/cli": "^12.2.10",
     "@angular/compiler-cli": "^12.2.10",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
